# ConsoleSnake

./: CMakeLists.txt
include/: console.hpp  snake.hpp
src/: console.cpp  snake.cpp
